force-app/main/default/objects/Charter_Flight_Information__c/Charter_Flight_Information__c.object-meta.xml
<CustomObject>
    <label>Charter Flight Information</label>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>Charter Flight Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charter Flights Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>