force-app/main/default/objects/Charter_Flight_Information__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A330-200</fullName>
            </value>
            <value>
                <fullName>A330-300</fullName>
            </value>
            <value>
                <fullName>A380</fullName>
            </value>
            <value>
                <fullName>B717-200 (1 Class)</fullName>
            </value>
            <value>
                <fullName>B717-200 (2 Class)</fullName>
            </value>
            <value>
                <fullName>B737-800</fullName>
            </value>
            <value>
                <fullName>B747-400 (3 Class V1)</fullName>
            </value>
            <value>
                <fullName>B747-400 (3 Class V2)</fullName>
            </value>
            <value>
                <fullName>B747-438 (4 Class)</fullName>
            </value>
            <value>
                <fullName>F100 Network Aviation</fullName>
            </value>
            <value>
                <fullName>Q200</fullName>
            </value>
            <value>
                <fullName>Q300</fullName>
            </value>
            <value>
                <fullName>Q400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>