force-app/main/default/objects/Charter_Flight_Information__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>