force-app/main/default/objects/Charter_Flight_Information__c/fields/Business_Class__c.field-meta.xml
<CustomField>
    <fullName>Business_Class__c</fullName>
    <label>Business Class Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Aircraft_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>