force-app/main/default/objects/Charter_Flight_Information__c/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract &amp; Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Charter Flights Information</relationshipLabel>
    <relationshipName>Charter_Flights_Information</relationshipName>
    <type>Lookup</type>
</CustomField>