force-app/main/default/objects/Charter_Flight_Information__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>