force-app/main/default/objects/Charter_Flight_Information__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>