force-app/main/default/objects/Charter_Flight_Information__c/fields/First_Class_Capacity__c.field-meta.xml
<CustomField>
    <fullName>First_Class_Capacity__c</fullName>
    <label>First Class Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Aircraft_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>