force-app/main/default/objects/Charter_Flight_Information__c/fields/Premium_Economy_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Premium_Economy_Capacity__c</fullName>
    <label>Premium Economy Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Aircraft_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>