force-app/main/default/objects/Charter_Flight_Information__c/fields/Seating_Space__c.field-meta.xml
<CustomField>
    <fullName>Seating_Space__c</fullName>
    <label>Seating Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>